k8s-yamls/cluster-ip-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: scipion-portal-svc
spec:
  type: ClusterIP
  ports:
  - name: scipion-portal-port
    port: 80
    targetPort: 8080
  selector:
    app: scipion-portal
