k8s-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scipion-portal-ingress
  annotations:
    kuberentes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
spec:
  tls:
    - hosts:
        - "scipion.cerit-sc.cz"
      secretName: scipion-cerit-sc-cz-tls
  rules:
  - host: "scipion.cerit-sc.cz"
    http:
      paths:
      - backend:
          service:
            name: scipion-portal-svc
            port:
              number: 80
        pathType: ImplementationSpecific
